# aurora-ai

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  PROMPT_TEMPLATE.md  pyproject.toml  render.yaml
docs/: milestone-01-core-config-providers.md  milestone-02-tools-filesystem.md  milestone-03-terminal.md  milestone-04-git.md  milestone-05-memory.md  milestone-06-context.md  milestone-07-router.md  milestone-08-agents.md  milestone-09-services.md  milestone-10-api.md  milestone-11-frontend.md
frontend/: index.html
src/aurora/: __init__.py
src/aurora/agents/: __init__.py  base.py  chat.py
src/aurora/api/: __init__.py  __main__.py  app.py
src/aurora/app/: __init__.py
src/aurora/core/: __init__.py  config.py  errors.py  types.py
src/aurora/frontend/: index.html
src/aurora/memory/: __init__.py  base.py  factory.py  file.py  in_memory.py
src/aurora/providers/: xai.py  (+7 more)
tests/: conftest.py  test_agents.py  test_api.py  test_core.py  test_memory.py  test_memory_factory.py  test_memory_file.py  test_providers.py  test_registry.py  test_tools.py
tests/app/: conftest.py  test_agents.py  test_api.py  test_autonomous.py  test_collaboration.py  test_config.py  test_context.py  test_core.py  test_database.py  test_git.py  test_guards.py  test_memory.py  test_pipeline.py  test_providers.py  test_router.py  test_services.py  test_system_prompt.py  test_terminal.py  test_tools.py  test_web_tools.py
vscode-extension/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: api.ts  chatView.ts  extension.ts  ide.ts
(+113 files in other folders)
