[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aurora-ai"
version = "0.1.0"
description = "Modular, provider-agnostic AI software engineering platform"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "fastapi>=0.110",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
serve = [
    "uvicorn>=0.29",
    "websockets>=12",
]
voice = [
    "faster-whisper>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.4",
]

[project.scripts]
aurora-api = "aurora.app.api.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 90
target-version = ["py312"]

[tool.ruff]
line-length = 90
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency markers are the idiomatic way to declare params.
extend-immutable-calls = ["fastapi.File", "fastapi.Form", "fastapi.Depends", "fastapi.Query"]
